# pprreeccog

./: .env.miner.example  .env.validator.example  .flake8  .gitignore  .pre-commit-config.yaml  INCENTIVE_IMPROVEMENT_GUIDE.md  MINER_IMPROVEMENT_GUIDE.md  Makefile  README copy.md  README.md  argparse_test.py  debug_data_sources.py  fix_all_price_variation.sh  fix_current_market_prices.sh  fix_eth_price_variation.sh  fix_eth_real_time_prices.sh  fix_logging_display.sh  fix_miner_block_sync.sh  fix_price_correction.sh  fix_price_variation.sh  fix_prices_to_current_market.sh  fix_real_time_prices.sh  fix_unrealistic_prices.sh  implement_real_time_prices.sh  improve_miner_predictions.sh  miner_config_optimized.env  optimize_miner_config.py  performance_monitor.py  precog_advanced_strategies_guide.md  precog_architecture_analysis.md  precog_custom_miners_usage_guide.md  precog_debugging_guide.md  precog_development_setup_guide.md  precog_miner_implementation_analysis.md  precog_performance_optimization_guide.md  precog_reward_mechanism_analysis.md  precog_validator_logic_analysis.md  pyproject.toml  start_miner.py  start_validator.py  (+8 more)
.github/workflows/: build.yml  ci.yml
docs/: Release Notes.md
precog/: __init__.py  protocol.py
precog/constants/: __init__.py
precog/miners/: advanced_ensemble_miner.py  base_miner.py  ensemble_miner.py  forward.py  forward_bad.py  lstm_miner.py  miner.py  miner_factory.py  ml_miner.py  sentiment_miner.py  technical_analysis_miner.py
precog/utils/: bittensor.py  classes.py  cm_data.py  config.py  general.py  (+3 more)
tests/: test_package.py
(+11 files in other folders)
