[tool.poetry]
name = "precog"
version = "0.2.0"
description = "Bitcoin Price Prediction Subnet"
authors = ["Coin Metrics", "Yuma Group"]
readme = "README.md"


[tool.poetry.dependencies]
# ^1.2.3 means >=1.2.3 and <2.0.0
# ~1.2.3 means >=1.2.3 and <1.3.0

# Python version - 3.9, 3.10, 3.11
python = ">= 3.9, < 3.12"

# Bittensor Version Strict
bittensor = "8.5.0"

# Bittensor Dependencies We Also Need
setuptools = "~70.0.0"
numpy = "~2.0.1"
pydantic = "^2.3.0"
requests = "^2.32.3"

# Subnet Specific Dependencies
coinmetrics-api-client = "^2024.11.21.20"
pytz = "^2024.2"
pandas = "^2.2.3"
gitpython = "^3.1.43"
wandb = "^0.18.6"
bittensor-cli = "^8.4.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pre-commit-hooks = "5.0.0"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"
hypothesis = "^6.122.3"


[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
skip = [
    ".venv",
    ".git",
    ".mypy_cache",
    "build",
    "dist",
]


#[tool.flake8]
# Refer to the `.flake8` file


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
